--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "homepage": "https://grandalf6.github.io/",
   "name": "portfolio",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "bootstrap": "^4.3.1",
@@ -10,32 +9,39 @@
     "jquery": "^3.3.1",
     "popper": "^1.0.1",
     "popper.js": "^1.14.7",
-    "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-pose": "^4.0.8",
     "react-scripts": "2.1.8",
-    "typeit": "^6.0.2",
-    "typescript": "^3.3.3333",
-    "webpack": "^4.28.3"
+    "typescript": "^3.3.3333"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "gh-pages -d dist src",
+    "start": "webpack-dev-server --config webpack.config.js --mode development",
+    "build": "webpack --config webpack.config.js --mode production"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
   "devDependencies": {
-    "webpack-cli": "^3.2.3"
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.12.0",
+    "prettier": "^1.17.0",
+    "react": "^16.8.6",
+    "react-pose": "^4.0.8",
+    "sass-loader": "^7.1.0",
+    "transition": "^0.1.1",
+    "typeit": "^6.0.3",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.3.1"
   }
 }
