--- a/package.json
+++ b/package.json
@@ -3,15 +3,8 @@
   "name": "portfolio",
   "version": "0.1.0",
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "bootstrap": "^4.3.1",
     "gh-pages": "^2.0.1",
-    "jquery": "^3.3.1",
-    "popper": "^1.0.1",
-    "popper.js": "^1.14.7",
-    "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8",
-    "typescript": "^3.3.3333"
+    "react-dom": "^16.8.4"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -24,22 +17,25 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "animate.css": "^3.7.0",
     "babel-loader": "^8.0.6",
     "bulma": "^0.7.4",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.2.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.12.0",
     "prettier": "^1.17.0",
     "react": "^16.8.6",
-    "react-pose": "^4.0.8",
+    "react-animate-on-scroll": "^2.1.5",
     "sass-loader": "^7.1.0",
-    "transition": "^0.1.1",
     "typeit": "^6.0.3",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.2.3",
