--- a/package.json
+++ b/package.json
@@ -30,15 +30,16 @@
     "eslint-plugin-react": "^7.13.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.12.0",
     "prettier": "^1.17.0",
     "react": "^16.8.6",
     "react-animate-on-scroll": "^2.1.5",
     "sass-loader": "^7.1.0",
+    "tooltip.js": "^1.3.2",
     "typeit": "^6.0.3",
     "webpack": "^4.31.0",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.3.1"
+    "webpack-cli": "^3.2.3"
   }
 }
