--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "animate.css": "^3.7.0",
     "babel-loader": "^8.0.6",
     "bulma": "^0.7.4",
+    "bulma-extensions": "^6.2.5",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -30,16 +31,15 @@
     "eslint-plugin-react": "^7.13.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.12.0",
     "prettier": "^1.17.0",
     "react": "^16.8.6",
     "react-animate-on-scroll": "^2.1.5",
     "sass-loader": "^7.1.0",
-    "tooltip.js": "^1.3.2",
     "typeit": "^6.0.3",
     "webpack": "^4.31.0",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.3.1"
   }
 }
