bundled config files

--- a/package.json
+++ b/package.json
@@ -6,6 +6,36 @@
     "gh-pages": "^2.0.1",
     "react-dom": "^16.8.4"
   },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
+    ]
+  },
+  "eslint": {
+    "plugins": [
+      "react-hooks"
+    ],
+    "rules": {
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "warn"
+    }
+  },
+  "prettier": {
+    "printWidth": 80,
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "bracketSpacing": false,
+    "jsxBracketSameLine": false,
+    "proseWrap": "always",
+    "arrowParens": "always"
+  },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -b master -d dist",
