--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-world-flags": "^1.4.1",
     "react": "^17.0.1",
+    "react-content-loader": "^6.0.1",
     "react-dom": "^17.0.1",
+    "react-flags": "^0.1.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-world-flags": "^1.4.0",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5",
     "typescript": "^4.1.2",
